preload=metadata loads a little instead of none

Change the multibuffer code to preload 1/32th of the normal preload
when "preload=metadata" is used. This should work around problems
that occur because WMPI says we have enough data while the demuxer
may still be filling buffers.

For a lot of videos, this means we'll be preloading 64k.

Bug: 814328
Change-Id: Iae6945d63bf8298975eb51eda22b16189c7658df
Reviewed-on: https://chromium-review.googlesource.com/937997
Commit-Queue: Fredrik Hubinette <hubbe@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539911}